--- a/style/policy.css
+++ b/style/policy.css
@@ -93,6 +93,21 @@ main div p, h2, h3 {
     color: black;
     transform: scale(1.02);
 }
+table {
+    border-collapse: collapse;
+    width: 100%;
+}
+
+th, td {
+    text-align: left;
+    padding: 8px;
+    border: 1px solid #ddd;
+}
+
+th {
+    background-color: #f2f2f2;
+
+}
 /* Footer */
 footer {
     display: flex;
