--- a/style/style_index.css
+++ b/style/style_index.css
@@ -96,6 +96,7 @@ main {
     justify-content: space-around;
     align-items: center;
     width: 100%;
+    margin-bottom: 50px;
 }
 .imagem_cel {
     display: none;
@@ -318,7 +319,7 @@ footer h4 a {
     color: white;
 }
 /* Media Query para telas menores (até 768px) */
-@media (max-width: 768px) {
+@media (max-width: 498px) {
     /* Header */
     header {
         display: none;
@@ -331,6 +332,7 @@ footer h4 a {
         display: flex;
         flex-direction: column;
         padding: 20px;
+        margin-bottom: 0px;
         font-size: 1.1em;
     }
     .imagem_cel {
@@ -469,6 +471,165 @@ footer h4 a {
     /* SECTION FOOTER */
     .container_footer {
         font-size: 0.6em;
+        height: auto;
+        text-align: center;
+    }
+    h4 {
+        padding: 5px;
+    }
+}
+@media (min-width: 499px) and (max-width: 768px) {
+    /* Header */
+    header {
+        display: none;
+    }
+    .imagem {
+        display: none;
+    }
+    /* SECTION ONE */
+    .sec_one {
+        display: flex;
+        flex-direction: column;
+        padding: 20px;
+        font-size: 1.1em;
+    }
+    .imagem_cel {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    #a_cel {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    #img_cell {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        max-width: 80%;
+    }
+    #a_cel {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .frase {
+        margin-top: 10px;
+    }
+    .p_name p {
+        margin-top: 15px;
+        font-size: 0.8em;
+    }
+    .button_two button {
+        padding: 25px 35px;
+        margin-top: 30px;
+        margin-bottom: 30px;
+    }
+    /* SECTION TWO */
+    .img_sec_two {
+        width: 80%;
+        height: auto;
+    }
+    .p_certifications {
+        margin-top: 10px;
+        margin-bottom: 10;
+        font-size: .8em;
+        text-align: center;
+    }
+    /* SECTION BALLOON */
+    .sec_balloon {
+        margin-top: 10px;
+        height: 120px;
+        padding: 10px;
+        text-align: center;
+        background-color: #A86638;
+    }
+    .sec_balloon::before {
+        content: "";
+        position: absolute;
+        bottom: -38px;
+        left: 50%;
+        transform: translateX(-50%);
+        border-left: 40px solid transparent;
+        border-right: 40px solid transparent;
+        border-top: 40px solid #A86638;
+    }
+    .div_balloon {
+        font-size: 1.5em;
+    }
+    h2 {
+        font-size: 0.8em;
+    }
+    /* SECTION THREE */
+    .sec_three {
+        display: none;
+        margin-top: 10px;
+        text-decoration: underline;
+    }
+    h3 {
+        margin-bottom: 20px;
+    }
+    .button_buy {
+        display: flex;
+        justify-content: center;
+    }
+    .button_buy button {
+        padding: 15px 80px;
+        font-size: 1.5em; 
+    }
+    /* SECTION FOUR */
+    .sec_four {
+        flex-direction: column;
+        background-color: #193f3759;
+        height: auto;
+        font-size: 1.2em;
+    }
+    #guar {
+        margin-top: 30px;
+        padding: 0px;
+    }
+    #h3_guarantee {
+        margin-top: 0px;
+        text-align: center;
+    }
+    .button_find_out {
+        display: flex;
+        text-align: center;
+    }
+    .button_find_out button {
+        margin-top: 50px;
+        margin-bottom: 50px;
+        padding: 15px 85px;
+        width: 80%;
+        background-color: #FDCF03;
+        font-weight: 700;
+        color: #193f37;
+        border: none;
+        border-radius: 30px;
+        cursor: pointer;
+        font-size: 1.2em; 
+        transition: transform .2s ease;
+    }
+    .button_find_out button:hover {
+        color: #266155;
+        transform: scale(1.03);
+    }
+    /* SECTION FIVE */
+    .stars {
+        flex-direction: column;
+        font-size: 1em;
+        margin-top: 0px;
+        margin-bottom: 0px;
+    }
+    .img_stars {
+        margin-left: 5px;
+        margin-right: 5px;
+        width: 70px;
+    }
+    /* SECTION FOOTER */
+    .container_footer {
+        font-size: 0.8em;
         height: auto;
         text-align: center;
     }
