--- a/style/style_index.css
+++ b/style/style_index.css
@@ -402,10 +402,9 @@ footer h4 a {
     /* SECTION BALLOON */
     .sec_balloon {
         margin-top: 10px;
-        height: 120px;
+        height: 150px;
         padding: 10px;
         text-align: center;
-        background-color: #A86638;
     }
     .sec_balloon::before {
         content: "";
@@ -415,7 +414,7 @@ footer h4 a {
         transform: translateX(-50%);
         border-left: 40px solid transparent;
         border-right: 40px solid transparent;
-        border-top: 40px solid #A86638;
+        border-top: 40px solid #362f86;
     }
     .div_balloon {
         font-size: 1em;
@@ -450,9 +449,15 @@ footer h4 a {
     #guar {
         margin-top: 30px;
         padding: 0px;
+        width: 120px;
+    }
+    .div_guarantee {
+        padding: 30px;
+        text-align: justify;
     }
     #h3_guarantee {
         margin-top: 0px;
+        margin-bottom: 50px;
         text-align: center;
     }
     .button_find_out {
@@ -561,10 +566,9 @@ footer h4 a {
     /* SECTION BALLOON */
     .sec_balloon {
         margin-top: 10px;
-        height: 120px;
+        height: 210px;
         padding: 10px;
         text-align: center;
-        background-color: #A86638;
     }
     .sec_balloon::before {
         content: "";
@@ -574,7 +578,7 @@ footer h4 a {
         transform: translateX(-50%);
         border-left: 40px solid transparent;
         border-right: 40px solid transparent;
-        border-top: 40px solid #A86638;
+        border-top: 40px solid #362f86;
     }
     .div_balloon {
         font-size: 1.5em;
@@ -607,11 +611,12 @@ footer h4 a {
         font-size: 1.2em;
     }
     #guar {
-        margin-top: 30px;
+        margin-top: 50px;
         padding: 0px;
     }
     #h3_guarantee {
-        margin-top: 0px;
+        margin-top: -30px;
+        margin-bottom: 50px;
         text-align: center;
     }
     .button_find_out {
@@ -629,7 +634,7 @@ footer h4 a {
         border: none;
         border-radius: 30px;
         cursor: pointer;
-        font-size: 1.2em; 
+        font-size: 1.5em; 
         transition: transform .2s ease;
     }
     .button_find_out button:hover {
