--- a/style/style_index.css
+++ b/style/style_index.css
@@ -247,7 +247,7 @@ h3 {
     align-items: center;
     margin-top: 100px;
     height: auto;
-    background-image:linear-gradient(#362f86 30%, #554ad1);
+    background-image:linear-gradient(#362f8670 30%, #554ad144);
     border-radius: 30px;
     font-size: 1.3em;
     width: 80%;
