--- a/style/style_index.css
+++ b/style/style_index.css
@@ -177,6 +177,7 @@ main {
     color: #211D50;
     position: relative;
     margin-top: 50px;
+    margin-bottom: 50px;
     font-size: 1.2em;
 }
 .sec_balloon::before {
@@ -243,14 +244,28 @@ h3 {
     color: #266155;
     transform: scale(1.03);
 }
+/* SEC TRAÇOS CURTOS */
+.sec_tracos_curt {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.div_tracos_curt {
+    width: 8px;
+    height: 5px;
+    background-color: #362f8631;
+    margin: 20px;
+}
 /* SEC GUARANTEE */
 .sec_guarantee {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 150px;
+    margin-top: 20px;
     height: auto;
     background-image:linear-gradient(#362f8636 30%, #554ad144);
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.599);
     border-radius: 30px;
     font-size: 1.3em;
     width: 80%;
@@ -269,7 +284,7 @@ h3 {
     text-decoration: none;
 }
 .button_find_out button {
-    margin-top: 150px;
+    margin-top: 100px;
     padding: 25px 85px;
     background-color: #FDCF03;
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.599);
@@ -323,7 +338,7 @@ h3 {
 }
 .div_traco_stars {
     width: 100%;
-    height: 2px;
+    height: 1px;
     background-color: #211D50;
 }
 .stars {
@@ -331,7 +346,7 @@ h3 {
     align-items: center;
     justify-content: center;
     margin-top: 10px;
-    margin-bottom: 15px;
+    margin-bottom: 10px;
 }
 .stars p {
     font-family: 'Quicksand';
